# castor-detector

./: .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  README.md  STATUS.md  castor-prd.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: BENCHMARK.md  VALIDATION.md  landing.html
docs/assets/: organic_entailment_chart.html
examples/: analyze_trajectory.py  delegate_to_ollama.py  live_observer.py  self_healing_chain.py
src/castor/: __init__.py  aggregate.py  analysis.py  attribution.py  calibrate.py  cli.py  confidence.py  config.py  drift.py  embedding.py  entailment.py  inject.py  observer.py  report.py  taxonomy.py  trajectory.py
src/castor/integrations/: __init__.py  langchain.py
tests/: __init__.py  conftest.py  test_analysis.py  test_attribution.py  test_calibrate.py  test_cli.py  test_confidence.py  test_drift.py  test_e2e.py  test_e2e_full.py  test_embedding.py  test_entailment.py  test_inject.py  test_langchain.py  test_observer.py  test_taxonomy.py  test_trajectory.py
validation/: agent_chain.py  analyze_organic.py  benchmark.py  calibrated-general.json  clean_trajectories.json  run_validation.py
validation/organic/: organic-01.json  organic-02.json  organic-03.json  organic-04.json  organic-05.json  organic-06.json  organic-07.json  organic-08.json
